{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 95,
  "lineage": "24e3d0ce-f4c7-2bae-208b-0c2e872edb67",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714228767476:internet-gateway/igw-08237a2fbe3bba057",
            "id": "igw-08237a2fbe3bba057",
            "owner_id": "714228767476",
            "tags": {
              "Name": "Internet Gateway VPC-1"
            },
            "tags_all": {
              "Name": "Internet Gateway VPC-1"
            },
            "vpc_id": "vpc-0ea33d2eec846b461"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-064ff8535d7d4317c179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-064ff8535d7d4317c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0cb991e2e8cda321c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.private_route_table_vpc2",
            "aws_vpc.vpc_1",
            "aws_vpc.vpc_2",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-094306af11f13fa6e3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-094306af11f13fa6e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0cb991e2e8cda321c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.private_route_table_vpc1",
            "aws_vpc.vpc_1",
            "aws_vpc.vpc_2",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714228767476:route-table/rtb-094306af11f13fa6e",
            "id": "rtb-094306af11f13fa6e",
            "owner_id": "714228767476",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route Table VPC-1"
            },
            "tags_all": {
              "Name": "Private Route Table VPC-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea33d2eec846b461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714228767476:route-table/rtb-064ff8535d7d4317c",
            "id": "rtb-064ff8535d7d4317c",
            "owner_id": "714228767476",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route Table VPC-2"
            },
            "tags_all": {
              "Name": "Private Route Table VPC-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5e5a2e683bf5960"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714228767476:route-table/rtb-09632a4af73c94735",
            "id": "rtb-09632a4af73c94735",
            "owner_id": "714228767476",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08237a2fbe3bba057",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table VPC-1"
            },
            "tags_all": {
              "Name": "Public Route Table VPC-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea33d2eec846b461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc1",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4d945f4709468fe",
            "route_table_id": "rtb-094306af11f13fa6e",
            "subnet_id": "subnet-0b9753b51dc4987db"
          },
          "dependencies": [
            "aws_route_table.private_route_table_vpc1",
            "aws_subnet.private_subnet_vpc1",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bb657a290df4727",
            "route_table_id": "rtb-064ff8535d7d4317c",
            "subnet_id": "subnet-092609603a1fcebef"
          },
          "dependencies": [
            "aws_route_table.private_route_table_vpc2",
            "aws_subnet.private_subnet_vpc2",
            "aws_vpc.vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b53e46887bc4a51f",
            "route_table_id": "rtb-09632a4af73c94735",
            "subnet_id": "subnet-045f5845fbc299f0e"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc1",
            "aws_route_table.public_route_table_vpc1",
            "aws_subnet.public_subnet_vpc1",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714228767476:subnet/subnet-0b9753b51dc4987db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9753b51dc4987db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "714228767476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet VPC-1"
            },
            "tags_all": {
              "Name": "Private Subnet VPC-1"
            },
            "vpc_id": "vpc-0ea33d2eec846b461"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714228767476:subnet/subnet-092609603a1fcebef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092609603a1fcebef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "714228767476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet VPC-2"
            },
            "tags_all": {
              "Name": "Private Subnet VPC-2"
            },
            "vpc_id": "vpc-0f5e5a2e683bf5960"
          },
          "dependencies": [
            "aws_vpc.vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714228767476:subnet/subnet-045f5845fbc299f0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045f5845fbc299f0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "714228767476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet VPC-1"
            },
            "tags_all": {
              "Name": "Public Subnet VPC-1"
            },
            "vpc_id": "vpc-0ea33d2eec846b461"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714228767476:vpc/vpc-0ea33d2eec846b461",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0112838525ab4f5b7",
            "default_route_table_id": "rtb-0460ed7dbb6b5e360",
            "default_security_group_id": "sg-0d7786945f27772cd",
            "dhcp_options_id": "dopt-05e0cdf5be2bb39b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea33d2eec846b461",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0460ed7dbb6b5e360",
            "owner_id": "714228767476",
            "tags": {
              "Name": "VPC-1"
            },
            "tags_all": {
              "Name": "VPC-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714228767476:vpc/vpc-0f5e5a2e683bf5960",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-07463ad5336dcfed9",
            "default_route_table_id": "rtb-08a4b855453d0d4ef",
            "default_security_group_id": "sg-0b7292838f9004e33",
            "dhcp_options_id": "dopt-05e0cdf5be2bb39b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f5e5a2e683bf5960",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a4b855453d0d4ef",
            "owner_id": "714228767476",
            "tags": {
              "Name": "VPC-2"
            },
            "tags_all": {
              "Name": "VPC-2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0cb991e2e8cda321c",
            "peer_owner_id": "714228767476",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0f5e5a2e683bf5960",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between VPC-1 and VPC-2"
            },
            "tags_all": {
              "Name": "VPC Peering between VPC-1 and VPC-2"
            },
            "vpc_id": "vpc-0ea33d2eec846b461"
          },
          "dependencies": [
            "aws_vpc.vpc_1",
            "aws_vpc.vpc_2"
          ]
        }
      ]
    }
  ]
}